divs overflowing their parent divs issue fixed once again

--- a/_sass/two-divs.sass
+++ b/_sass/two-divs.sass
@@ -498,21 +498,21 @@
                 right: 20%   
 
 
-@media screen and (max-width:410px)
+@media screen and (max-width:412px)
     .container
         .content
             .left-content
-                top: 20px
+                top: 80px
             .right-content
                 width: 70%
                 right: 13%
 
 
-@media screen and (max-width:350px)
+@media screen and (max-width:361px)
     .container
         .content
             .left-content
-                top: 40px
+                top: 90px
                 width: 100%
                 left: 0%
                 h2
@@ -551,7 +551,7 @@
             height: 70vh
         .right
             top: 70vh
-            height: 100vh
+            height: 150vh
         .content
             .right-content
                 top: 75vh                        
